--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>Titulo Nuevo Modificado!!</h1>
+    <form action="#" method="get">
+        <input type="button" value="enviar">
+    </form>
 </body>
 
 </html>
